Изменение ссылки на страницу поиска

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         
     <div class="main">
        <form action="index.php">
-                <a href="house.html">
+                <a href="find">
                     <button><img src="img/main_button.png" alt="main_button"></button> Выбор дома
                 </a>
                 <br>
