Изменен адрес линка пункта "Выбор дома" с find на findbyaddress

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <link rel="stylesheet" type="text/css" href="css/index_style.css" />
+        <link rel="stylesheet" type="text/css" href="css/background.css" />
         <title>Ремонт</title>
     </head>
 
@@ -16,7 +17,7 @@
         
     <div class="main">
        <form action="index.php">
-                <a href="find">
+                <a href="findbyaddress">
                     <button><img src="img/main_button.png" alt="main_button"></button> Выбор дома
                 </a>
                 <br>
