Добавлены кнопки на форму object

--- a/object/object.html
+++ b/object/object.html
@@ -8,6 +8,11 @@
 </head>
 <body>
 <div class="wrap">
+	<div class="panel">
+		<div class="pbf_link"><a href="#"></a></div>
+		<div class="pbs_link"><a href="#"></a></div>
+		<div class="pbt_link"><a href="#"></a></div>
+	</div>
 	<div class="info">
 	<table class="main">
 		<tr>
